# aes

./: Makefile  README.md  SKILL.md
.aes/: config.mk
.github/workflows/: ci.yml
docs/: DESIGN.md  PERSONAS.md  REQUIREMENTS.md  ROADMAP.md  VISION.md
docs/TASKS/: 00-bootstrap-aes.md
examples/: example-task.md
scripts/: build.sh  check.sh  deploy.sh  detect-language.sh  doctor.sh  format.sh  install-deps.sh  install-skill.sh  lint.sh  metrics.sh  new-project.sh  roadmap.sh  run.sh  test.sh  validate-code.sh  validate-docs.sh  validate-tests.sh
template/: task.md
templates/flutter/: .gitignore  analysis_options.yaml  pubspec.yaml
templates/flutter/lib/: main.dart
templates/flutter/test/: widget_test.dart
templates/go/: .gitignore  go.mod
templates/go/src/: main.go
templates/java/: build.gradle
templates/java/src/main/java/com/example/: App.java
templates/java/src/test/java/com/example/: AppTest.java
templates/javascript/: .eslintrc.js  jest.config.js  package.json
templates/javascript/src/: index.js
templates/php/: .gitignore  composer.json
templates/php/src/: index.php
templates/php/tests/: AppTest.php
templates/python/: .gitignore  pyproject.toml  pytest.ini
templates/python/src/: __init__.py  main.py
templates/python/tests/: test_main.py
templates/rust/: .gitignore  Cargo.toml
templates/rust/src/: main.rs
tests/: aes-self-test.sh
