[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aes-project"
version = "0.1.0"
description = "AES-managed Python project"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=xml",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "PL", "RUF"]
ignore = []
exclude = [
    ".git",
    ".venv",
    "env",
    "venv",
    ".eggs",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.isort]
known-first-party = ["src"]
